# bank_backend

./: .env  .gitignore  Cargo.toml  Dokumentacia_Bank_Backend.docx  README.md  compose.yml  test.sh
src/: crud.rs  db.rs  lib.rs  main.rs  models.rs
