[package]
name = "bank_backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "bank_backend"
path = "src/lib.rs"

[[bin]]
name = "bank_backend"
path = "src/main.rs"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "decimal", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = "1.33"
argon2 = { version = "0.5", features = ["std"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
